# multi_gpu_training

./: .gitignore  Makefile  README.md  jax.def  pyproject.toml  pytorch.def
01_single_gpu/: README.md  job.slurm  mnist_classify.py
02_pytorch_ddp/: README.md  job.slurm  mnist_classify_ddp.py  simple.slurm
03_pytorch_lightning/: README.md
03_pytorch_lightning/multi/: job.slurm  myscript.py
03_pytorch_lightning/simple/: example.py  job.slurm
04_model_parallel_with_fsdp/: README.md  chess_finetune.py  chess_finetune.sh
05_jax/: distributed.py  distributed.slurm  mnist_classify.py  mnist_classify.slurm
